appId: com.yhonq.coganaapp
---
- launchApp
- assertVisible: "COGANA"
- scrollUntilVisible:
    element: "Comprar como cliente"
    direction: DOWN
- tapOn: "Comprar como cliente"
- assertVisible: "Correo"
- assertVisible: "Contrase\u00f1a"
- assertVisible: "Entrar"
- tapOn: "Correo"
- inputText: "test@cogana.com"
- tapOn: "Contrase\u00f1a"
- inputText: "password123"
- tapOn: "Entrar"